--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,10 @@
+package android
+
 group 'com.m1chl.flutter_biometrics'
-version '1.0-SNAPSHOT'
+version '1.1.0'
 
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
