--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,16 @@
 group 'com.m1chl.flutter_biometrics'
-version '1.1.0'
+version '1.2.0'
 
 buildscript {
     ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:8.7.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -18,6 +19,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 
@@ -25,7 +27,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
+    namespace 'com.m1chl.flutter_biometrics'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
